<resources>
    <string name="app_name">Workspace</string>
    <string name="email">Email</string>
    <string name="loginPassword">Password</string>
    <string name="signin">Sign-In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signUp">Sign-Up</string>
    <string name="username">Username</string>
    <string name="display_name">Display Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Connect</string>
    <string name="connection_request">Connection Request</string>
    <string name="no_pending_connection_request_test">Yeah! No Pending Connection Request!</string>
    <string name="suggestions">Suggestions</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="withdraw">Withdraw</string>
    <string name="requests_sent">Requests Sent</string>
    <string name="requests_received">Requests Received</string>
    <string name="connected">Connected</string>
    <string name="enter_your_message_here">Enter your Message here.</string>
    <string name="description">Description</string>
    <string name="workspace_team_name">Workspace/Team Name</string>
    <string name="workspace_description">Workspace Description</string>
    <string name="participants">Participants</string>
    <string name="add_participants">Add Participants</string>
    <string name="select_participants_info">Select Participants to add -</string>
    <string name="left_this_workspace">Left this Workspace</string>
    <string name="drawing_sheet">Drawing Sheet</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_description">Enter new Description</string>
    <string name="account_section">Account Section</string>
    <string name="chats">Chats</string>
    <string name="connections">Connections</string>
    <string name="meetings">Meetings</string>
    <string name="new_meeting">New Meeting</string>
    <string name="join_a_meeting">Join a Meeting</string>
    <string name="enter_the_meeting_room_id">Enter the Meeting Room Id</string>
    <string name="create_a_new_meeting">Create a new Meeting</string>
    <string name="join_the_meeting">Join the Meeting</string>
    <string name="new_meeting_room_name">New Meeting Room Name</string>
    <string name="screen_share">Screen Share</string>
    <string name="reactions">Reactions</string>
    <string name="meet_details">Meet Details</string>
    <string name="meet_joining_details">Meet Joining Details</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="dismiss">Dismiss</string>
    <string name="rset_password_link_request">Reset Password Link Request</string>
    <string name="submit">Submit</string>


</resources>