<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/workspace"
        android:icon="@drawable/ic_workspaces"
        android:title="@string/app_name" />

    <item
        android:id="@+id/chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />

    <item
        android:id="@+id/connection_requests"
        android:icon="@drawable/ic_connect"
        android:title="@string/connections" />

    <item
        android:id="@+id/meetings"
        android:icon="@drawable/ic_baseline_call_24"
        android:iconTint="@color/white"
        android:title="@string/meetings" />

    <!--    <item-->
    <!--        android:id="@+id/notifications"-->
    <!--        android:icon="@drawable/ic_notifications"-->
    <!--        android:title="Notifications" />-->

    <!--    <item-->
    <!--        android:id="@+id/more"-->
    <!--        android:icon="@drawable/ic_more"-->
    <!--        android:title="More" />-->

</menu>