<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="room"
            type="com.gathering.friends.models.Room" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.WorkspaceDescriptionActivity">

        <LinearLayout
            android:id="@+id/layoutRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/adamina"
                    android:gravity="center_vertical"
                    android:text="@string/workspace_team_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/name_checked_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_check_circle"
                    android:visibility="gone"
                    app:tint="@android:color/holo_green_light" />

                <ImageView
                    android:id="@+id/name_edit_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    app:tint="#383636" />
            </LinearLayout>

            <EditText
                android:id="@+id/display_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:gravity="center_vertical"
                android:hint="@string/enter_new_name"
                android:inputType="textMultiLine"
                android:text="@{room.roomName}"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/display_name_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_light"
                android:gravity="center_vertical"
                android:text="@{room.roomName}"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRoomDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/adamina"
                    android:gravity="center_vertical"
                    android:text="@string/workspace_description"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/description_checked_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_check_circle"
                    android:visibility="gone"
                    app:tint="@android:color/holo_green_light" />

                <ImageView
                    android:id="@+id/description_edit_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    app:tint="#383636" />
            </LinearLayout>

            <EditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:gravity="center_vertical"
                android:hint="@string/enter_new_description"
                android:inputType="textMultiLine"
                android:text="@{room.roomDescription}"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_light"
                android:gravity="center_vertical"
                android:text="@{room.roomDescription}"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/adamina"
            android:text="@string/participants"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/orange"
            android:text="@string/add_participants"
            android:textColor="@color/white"
            app:icon="@android:drawable/ic_input_add"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLeftWorkspace"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/left_this_workspace"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRoomName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRoomDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>