<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.gathering.friends.models.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".fragments.UserAccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:gravity="center"
                android:text="@string/update_your_profile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="15dp"
                android:loadImage="@{user.profileUri}"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/profile_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik_light"
                    android:text="@{user.username}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/profile_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mailid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik_light"
                    android:text="@{user.email}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:weightSum="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/rubik_light"
                    android:gravity="center_vertical"
                    android:text="@string/display_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/display_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik_light"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_new_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/display_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik_light"
                    android:gravity="center_vertical"
                    android:text="@{user.displayName}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/name_checked_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_check_circle"
                    android:visibility="gone"
                    app:tint="@color/black" />

                <ImageView
                    android:id="@+id/name_edit_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRoomDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/rubik_light"
                        android:gravity="center_vertical"
                        android:text="@string/workspace_description"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/description_checked_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_check_circle"
                        android:visibility="gone"
                        app:tint="@android:color/holo_green_light" />

                    <ImageView
                        android:id="@+id/description_edit_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_edit"
                        app:tint="#383636" />
                </LinearLayout>

                <EditText
                    android:id="@+id/description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_light"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_new_description"
                    android:inputType="textMultiLine"
                    android:text="@{user.description}"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rubik_light"
                    android:gravity="center_vertical"
                    android:text="@{user.description}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>